# SpringFlyCoffee

./: README.md
Cappuccino/: README.md  main.py
Espresso/: Espresso.ino  README.md  hcsr04.cpp  hcsr04.h  pump.cpp  pump.h
Latte/: .gitignore  CMakeLists.txt  FaceRecognition.cpp  FaceRecognition.h  MainWindow.cpp  MainWindow.h  README.md  WebSocketsClient.cpp  WebSocketsClient.h  face_recognition.cpp  face_recognition.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  websockets_client.cpp  websockets_client.h
Latte/Camera/: Camera.cpp  Camera.h
Latte/FaceRecognition/: FaceRecognition.cpp  FaceRecognition.h
Latte/RockxFace/: RockxFace.cpp  RockxFace.h
Latte/WebSocketsClient/: WebSocketsClient.cpp  WebSocketsClient.h
Latte/camera/: camera.cpp  camera.h
Latte/cxxopts/: cxxopts.hpp
Latte/facerecognition/: facerecognition.cpp  facerecognition.h
Latte/facewindow/: facewindow.cpp  facewindow.h  facewindow.ui
Latte/pump/: pump.cpp  pump.h
Latte/pumpwindow/: pumpwindow.cpp  pumpwindow.h  pumpwindow.ui
Latte/rockx_face/: rockx_face.cpp  rockx_face.h
Latte/rockxface/: rockxface.cpp
Latte/serial/: CMakeLists.txt  README.md  package.xml
Latte/serial/examples/: serial_example.cc
Latte/serial/include/serial/: serial.h
Latte/serial/include/serial/impl/: unix.h
Latte/serial/src/: serial.cc
Latte/serial/src/impl/: unix.cc
Latte/serial/src/impl/list_ports/: list_ports_linux.cc
Latte/serial/tests/: unix_serial_tests.cc
Latte/serial/tests/proof_of_concepts/: python_serial_test.py  tokenizer.cc
Latte/serial/tests/unit/: unix_timer_tests.cc
Latte/servicebot/: servicebot.cpp  servicebot.h
Latte/websocketsclient/: websocketsclient.cpp  websocketsclient.h
Latte/xp58/: xp58.cpp  xp58.h
Mechanical Drawings/: coffee.dwg
Mocca/: CMakeLists.txt  README.md  main.cpp
